fix size calculating problem

--- a/arcchartview/build.gradle
+++ b/arcchartview/build.gradle
@@ -46,4 +46,4 @@ repositories {
 
 
 // or use the remote copy to keep update with latest changes
-apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
+//apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
